--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
